--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/JWT
+MONGO_URI=mongodb://localhost:27017/easypassoralfrench
 PORT=5000
 JWT_SECRET=your_jwt_secret_key
