--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb://localhost:27017/easypassoralfrench
 PORT=5000
 JWT_SECRET=your_jwt_secret_key
+LANGUAGETOOL_API=https://api.languagetool.org/v2/check
