--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,6 @@
 MONGO_URI=mongodb://localhost:27017/easypassoralfrench
 PORT=5000
 JWT_SECRET=your_jwt_secret_key
+STRIPE_SECRET_KEY=your_stripe_test_secret_key_here
+STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
 LANGUAGETOOL_API=https://api.languagetool.org/v2/check
