--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
